faet: Carousel 버튼 추가

--- a/detail.html
+++ b/detail.html
@@ -70,21 +70,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -265,21 +265,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -459,21 +459,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -654,21 +654,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -849,21 +849,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -1044,21 +1044,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -1239,21 +1239,21 @@
               </div>
               <div class="right">
                 <div class="icons">
-                  <div class="icon">
+                  <button class="icon">
                     <img src="img/yunahong.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/junheoklee.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/yelinbok_1.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/seunghoekim.png" />
-                  </div>
-                  <div class="icon">
+                  </button>
+                  <button class="icon">
                     <img src="img/jongminchae.png" />
-                  </div>
+                  </button>
                 </div>
                 <div class="guest__log-title">
                   <span>Say "Hello"<br />to our teammate</span>
@@ -1447,6 +1447,7 @@
       const carousel = document.querySelector(".carousel-container");
       const carouselBox = document.querySelectorAll(".carousel-box");
       const icons = document.querySelectorAll(".icons");
+      const icon = document.querySelectorAll(".icon");
       const nextBtn = document.querySelector(".next");
       const prevBtn = document.querySelector(".prev");
 
@@ -1495,12 +1496,27 @@
         setTranslate();
       };
 
+
+
       const init = () => {
         setBackGroundColor();
         setTranslate();
       };
 
       init();
+
+      icon.forEach(icon => {
+        icon.addEventListener("click", function(e) {
+            let parent = e.currentTarget.parentElement;
+            let children = parent.children;
+            let index = Array.prototype.indexOf.call(children, e.currentTarget) + 1;
+            if(idx !== index){
+                idx = index;
+                slide(idx);
+                setBackGroundColor();
+            }
+        });
+      });
 
       nextBtn.addEventListener("click", () => {
         if (isInteraction) return;
