fix: pull 오류 수정

--- a/detail.html
+++ b/detail.html
@@ -1001,13 +1001,8 @@
                   </button>
                   <button class="icon">
                     <img src="img/seunghoekim.png" />
-<<<<<<< HEAD
                   </button>
                   <button class="icon">
-=======
-                  </div>
-                  <div class="icon blue">
->>>>>>> 1494ec2401d3d92187a3caccf75d4960e7229ce0
                     <img src="img/jongminchae.png" />
                   </button>
                 </div>
@@ -1395,7 +1390,7 @@
         "#8fbcdb", // 이준혁
         "#bba2fe", // 복예린
         "#e2c881", // 김승회
-        "288292", // 채종민
+        "#288292", // 채종민
       ];
 
       let idx = 1;
