feat:메인페이지에서 디테일 페이지 넘어갈때 파라미터 활용 슬라이드 위치 조정

--- a/detail.html
+++ b/detail.html
@@ -1383,6 +1383,7 @@
       const icon = document.querySelectorAll(".icon");
       const nextBtn = document.querySelector(".next");
       const prevBtn = document.querySelector(".prev");
+      const urlParams = new URL(location.href).searchParams;
 
       // 원하는 배경색 헥스코드로 넣기
       const myBackGroundColor = [
@@ -1435,8 +1436,13 @@
 
 
       const init = () => {
+        idx = urlParams.get('page');
+        if(idx !== "1"){
+          slide(idx);
+        }
         setBackGroundColor();
         setTranslate();
+
       };
 
       init();
