--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </a>
           </li>
           <li class="team_profile">
-            <a class="ex" href="#">
+            <a class="ex" href="./detail.html?page=1">
               <p class="team_name">
                 YUNA HONG
               </p>
@@ -73,7 +73,7 @@
             </a>    
           </li>
           <li class="team_profile">
-            <a class="ex" href="#">
+            <a class="ex" href="./detail.html?page=2">
               <p class="team_name">
                 JUNHEOK LEE
               </p>
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li class="team_profile">
-            <a class="ex" href="#">
+            <a class="ex" href="./detail.html?page=3">
               <p class="team_name">
                 YELIN BOK
               </p>
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li class="team_profile">
-            <a class="ex" href="#">
+            <a class="ex" href="./detail.html?page=4">
               <p class="team_name">
                 SEUNGHOE KIM
               </p>
