fix:반복을 위한 종민님 페이지 승회님 페이지로 변경

--- a/detail.html
+++ b/detail.html
@@ -18,24 +18,24 @@
           <!--무한히 움직일 수 있도록 마지막꺼 맨앞으로(편법임)-->
           <div class="carousel-box">
             <div class="container">
-              <div class="left-left green">
-                <img src="img/yunahong.png" />
+              <div class="left-left yellow">
+                <img src="img/seunghoekim.png" />
               </div>
               <div class="left-right">
                 <span class="profile">Profile</span>
                 <div class="profile__contents">
                   <div class="profile__content">
                     <span class="item">Name 👤</span>
-                    <span class="item__value">채종민</span>
+                    <span class="item__value">김승회</span>
                   </div>
                   <div class="profile__content">
                     <span class="item">E-mail 📧</span>
-                    <span class="item__value">yelini9060@naver.com</span>
+                    <span class="item__value">butterbeetle@naver.com</span>
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
                     <span class="item__value"
-                      >https://velog.io/@liin/posts</span
+                      >https://github.com/butterbeetle</span
                     >
                   </div>
                 </div>
@@ -46,7 +46,7 @@
                     <div>About me</div>
                     <div class="aboutMe__tags">
                       <div class="aboutMe__tag">
-                        <div class="tag">INTP</div>
+                        <div class="tag">ISFP</div>
                         <div class="tag">특징</div>
                       </div>
                       <div class="aboutMe__tag">
@@ -90,9 +90,7 @@
                   <div class="comment__boxs">
                     <div class="comment__box">
                       <div class="profile__img">
-                        <img
-                          src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
-                        />
+                        <img src="img/seunghoekim.png" />
                       </div>
                       <div class="user">
                         <div class="comment">
@@ -108,9 +106,7 @@
                     </div>
                     <div class="comment__box">
                       <div class="profile__img">
-                        <img
-                          src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
-                        />
+                        <img src="img/seunghoekim.png" />
                       </div>
                       <div class="user">
                         <div class="comment">
@@ -126,9 +122,7 @@
                     </div>
                     <div class="comment__box">
                       <div class="profile__img">
-                        <img
-                          src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
-                        />
+                        <img src="img/seunghoekim.png" />
                       </div>
                       <div class="user">
                         <div class="comment">
@@ -144,9 +138,7 @@
                     </div>
                     <div class="comment__box">
                       <div class="profile__img">
-                        <img
-                          src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
-                        />
+                        <img src="img/seunghoekim.png" />
                       </div>
                       <div class="user">
                         <div class="comment">
@@ -162,9 +154,7 @@
                     </div>
                     <div class="comment__box">
                       <div class="profile__img">
-                        <img
-                          src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
-                        />
+                        <img src="img/seunghoekim.png" />
                       </div>
                       <div class="user">
                         <div class="comment">
@@ -182,12 +172,10 @@
 
                   <div class="gest__log-input">
                     <div class="profile__img">
-                      <img
-                        src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
-                      />
+                      <img src="img/seunghoekim.png" />
                     </div>
                     <div class="user">
-                      <span class="commentName">복예린님에게 한마디</span>
+                      <span class="commentName">김승회님에게 한마디</span>
                       <div class="comment">
                         <input
                           class="commentInput"
