--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Title</title>
   </head>
   <body>
-    <header class="header">JALHALSUITZO</header>
+    <header class="header">
+      <div class="header_wrap inner_wrap">
+        <p>J</p>
+        <p>A</p>
+        <p>L</p>
+        <p>H</p>
+        <p>A</p>
+        <p>L</p>
+        <p>S</p>
+        <p>U</p>
+        <p>I</p>
+        <p>T</p>
+        <p>Z</p>
+        <p>O</p>
+      </div>
+    </header>
     <div class="wrap">
       <div class="page">
         <div class="main_img">
