--- a/detail.html
+++ b/detail.html
@@ -87,93 +87,8 @@
                   <span>Say "Hello"<br />to our teammate</span>
                 </div>
                 <div class="guest__log">
-<<<<<<< HEAD
                   <div class="comment__boxs"></div>
-=======
-                  <div class="comment__boxs">
-                    <div class="comment__box">
-                      <div class="profile__img">
-                        <img src="img/seunghoekim.png" />
-                      </div>
-                      <div class="user">
-                        <div class="comment">
-                          <span
-                            >내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span
-                          >
-                        </div>
-                        <div class="commnet-icons">
-                          <button><img src="./img/update.png" alt="" /></button>
-                          <button><img src="./img/delete.png" alt="" /></button>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="comment__box">
-                      <div class="profile__img">
-                        <img src="img/seunghoekim.png" />
-                      </div>
-                      <div class="user">
-                        <div class="comment">
-                          <span
-                            >내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span
-                          >
-                        </div>
-                        <div class="commnet-icons">
-                          <button><img src="./img/update.png" alt="" /></button>
-                          <button><img src="./img/delete.png" alt="" /></button>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="comment__box">
-                      <div class="profile__img">
-                        <img src="img/seunghoekim.png" />
-                      </div>
-                      <div class="user">
-                        <div class="comment">
-                          <span
-                            >내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span
-                          >
-                        </div>
-                        <div class="commnet-icons">
-                          <button><img src="./img/update.png" alt="" /></button>
-                          <button><img src="./img/delete.png" alt="" /></button>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="comment__box">
-                      <div class="profile__img">
-                        <img src="img/seunghoekim.png" />
-                      </div>
-                      <div class="user">
-                        <div class="comment">
-                          <span
-                            >내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span
-                          >
-                        </div>
-                        <div class="commnet-icons">
-                          <button><img src="./img/update.png" alt="" /></button>
-                          <button><img src="./img/delete.png" alt="" /></button>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="comment__box">
-                      <div class="profile__img">
-                        <img src="img/seunghoekim.png" />
-                      </div>
-                      <div class="user">
-                        <div class="comment">
-                          <span
-                            >내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span
-                          >
-                        </div>
-                        <div class="commnet-icons">
-                          <button><img src="./img/update.png" alt="" /></button>
-                          <button><img src="./img/delete.png" alt="" /></button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
->>>>>>> 69478b1bb2ef4a92431aade16634a37fbc66b7a5
                   <div class="gest__log-input">
                     <div class="profile__img">
                       <img src="img/seunghoekim.png" />
@@ -584,11 +499,6 @@
             </div>
           </div>
 
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 69478b1bb2ef4a92431aade16634a37fbc66b7a5
           <!--무한히 움직일 수 있도록 맨앞꺼 마지막으로(편법임)-->
           <div class="carousel-box">
             <div class="container">
@@ -756,13 +666,12 @@
       };
 
       const init = () => {
-        idx = urlParams.get('page');
-        if(idx !== "1"){
+        idx = urlParams.get("page");
+        if (idx !== "1") {
           slide(idx);
         }
         setBackGroundColor();
         setTranslate();
-
       };
 
       init();
@@ -873,10 +782,10 @@
       // console.log(personalData);
       // console.log(carouselBox);
       personalData.forEach((data, idx) => {
-        console.log(data);
-        console.log(carouselBox[idx]);
+        // console.log(data);
+        // console.log(carouselBox[idx]);
         const tmpHTML = carouselBox[idx].querySelector(".guest__log");
-        console.log(tmpHTML);
+        // console.log(tmpHTML);
         data.comments.forEach((comment) => {
           const commentHTML = `
         <div class="comment__box">
@@ -889,7 +798,7 @@
             </div>
           </div>
         </div>`;
-          console.log(commentHTML);
+          // console.log(commentHTML);
           tmpHTML.insertAdjacentHTML("afterbegin", commentHTML);
         });
       });
