--- a/detail.html
+++ b/detail.html
@@ -734,6 +734,8 @@
         getFirestore,
         collection,
         addDoc,
+        setDoc,
+        updateDoc,
         getDocs,
         doc,
       } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
@@ -785,34 +787,61 @@
       personalData[0] = personalData[MEMBER];
       personalData[MEMBER + 1] = personalData[1];
 
+      const createComment = (message, idx) => {
+        // 각 사람의 comment__boxs HTML 가져오기
+        const tmpHTML = carouselBox[idx].querySelector(".comment__boxs");
+        const commentHTML = `
+          <div class="comment__box">
+            <div class="profile__img">
+              <img src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
+            </div>
+            <div class="user">
+              <div class="comment">
+                <span>${message}</span>
+              </div>
+            </div>
+          </div>`;
+        // 만든 comment_box를 위에서 가져온 guest__log에 넣기
+        tmpHTML.insertAdjacentHTML("afterbegin", commentHTML);
+      };
+
       // 저장한 개인 데이터를 순회
       // 페이지 클릭 시 새 페이지로 이동 하는식이 아니라 캐러셀로 되어있어서 한번에 받아오고 한번에 처리해야 되기때문
       personalData.forEach((data, idx) => {
-        // 각 사람의 guest__log HTML 가져오기
-        const tmpHTML = carouselBox[idx].querySelector(".comment__boxs");
         // 개인이 가지고 있는 코멘트 마다 comment_box 만들기
-        data.comments.forEach((comment) => {
-          const commentHTML = `
-        <div class="comment__box">
-          <div class="profile__img">
-            <img src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
-          </div>
-          <div class="user">
-            <div class="comment">
-              <span>${comment}</span>
-            </div>
-          </div>
-        </div>`;
-          // 만든 comment_box를 위에서 가져온 guest__log에 넣기
-          tmpHTML.insertAdjacentHTML("afterbegin", commentHTML);
+        data.comments.forEach((data) => {
+          const message = data.message;
+          // 각 사람의 comment__boxs HTML 가져오기
+          createComment(message, idx);
         });
       });
 
-      const commentInputHTML = document.querySelectorAll(".send");
-      console.log(commentInputHTML);
-      commentInputHTML.forEach((HTML, idx) => {
+      // comment 저장
+      const sendComment = async (db, idx, message) => {
+        const tmp = {
+          message,
+          timestamp: Date.now(),
+        };
+        console.log(personalData[idx].comments);
+        personalData[idx].comments.push(tmp);
+        console.log(personalData[idx].comments);
+        // const userCollection = collection(db, `user/${idx}`, "comments");
+
+        await setDoc(doc(db, `user`, `${idx}`), {
+          index: idx,
+          comments: [...personalData[idx].comments],
+        });
+
+        createComment(message, idx);
+      };
+
+      const commentSendHTML = document.querySelectorAll(".send");
+      const commentInputHTML = document.querySelectorAll(".commentInput");
+
+      commentSendHTML.forEach((HTML, idx) => {
         HTML.addEventListener("click", async () => {
-          console.log(idx, "CLICK");
+          const message = commentInputHTML[idx].value;
+          sendComment(db, idx, message);
         });
       });
       // commentInputHTML.addEventListener("click", () => {
