fix: introduce 가로 사이즈 조정

--- a/detail.html
+++ b/detail.html
@@ -800,6 +800,10 @@
               <div class="comment">
                 <span>${message}</span>
               </div>
+              <div class="commnet-icons">
+                <button><img src="./img/update.png" alt=""></button>
+                <button><img src="./img/delete.png" alt=""></button>
+              </div>
             </div>
           </div>`;
         // 만든 comment_box를 위에서 가져온 guest__log에 넣기
