Style. 방명록 창 복구

--- a/detail.html
+++ b/detail.html
@@ -95,7 +95,7 @@
                     <div class="profile__img">
                       <img src="img/seunghoekim.png" />
                     </div>
-                    <div class="user">
+                    <div class="user input">
                       <span class="commentName">김승회님에게 한마디</span>
                       <div class="comment">
                         <input
@@ -192,7 +192,7 @@
                     <div class="profile__img">
                       <img src="img/yunahong.png" />
                     </div>
-                    <div class="user">
+                    <div class="user input">
                       <span class="commentName">복예린님에게 한마디</span>
                       <div class="comment">
                         <input
@@ -307,7 +307,7 @@
                     <div class="profile__img">
                       <img src="img/junheoklee.png" />
                     </div>
-                    <div class="user">
+                    <div class="user input">
                       <span class="commentName">복예린님에게 한마디</span>
                       <div class="comment">
                         <input
@@ -406,7 +406,7 @@
                     <div class="profile__img">
                       <img src="img/yelinbok.png" />
                     </div>
-                    <div class="user">
+                    <div class="user input">
                       <span class="commentName">복예린님에게 한마디</span>
                       <div class="comment">
                         <input
@@ -505,7 +505,7 @@
                     <div class="profile__img">
                       <img src="img/seunghoekim.png" />
                     </div>
-                    <div class="user">
+                    <div class="user input">
                       <span class="commentName">김승회님에게 한마디</span>
                       <div class="comment">
                         <input
@@ -606,7 +606,7 @@
                         src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png"
                       />
                     </div>
-                    <div class="user">
+                    <div class="user input">
                       <span class="commentName">복예린님에게 한마디</span>
                       <div class="comment">
                         <input
