--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       <div class="page">
         <ul class="profile_wrap">
           <li class="team_profile">
-            <a href="#">
-              <p class="team_name">
+            <!-- <a href="#"> -->
+              <!-- <p class="team_name">
                 CHRONG PARK
-              </p>
-              <div class="circle">
-                <img class="team_photo" src="./img/chorongpark.png" alt="profile_img">
+              </p> -->
+              <div >
+                <img class="team_photo" src="./img/Black_question_mark.png" alt="profile_img">
               </div>
-            </a>
+            <!-- </a> -->
           </li>
           <li class="team_profile">
             <a class="ex" href="./detail.html?page=1">
@@ -101,14 +101,14 @@
             </a>
           </li>
           <li class="team_profile">
-            <a href="#">
-              <p class="team_name">
+            <!-- <a href="#"> -->
+              <!-- <p class="team_name">
                 JONGMIN CHAE
-              </p>
-              <div class="circle">
-                <img class="team_photo" src="./img/jongminchae.png" alt="profile_img">
+              </p> -->
+              <div>
+                <img class="team_photo" src="./img/Black_question_mark.png" alt="profile_img">
               </div>
-            </a>
+            <!-- </a> -->
           </li>
         </ul>
       </div>
